# zed-openspec-extension

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  INSTALL.md  INSTALL_MACOS.md  LICENSE  QUICK_START.md  README.md  README_EXTENSION.md  README_PHASE1.md  SPECIFICATION.MD  Zed_OpenSpec_Technical_Implementation_Guide.md  extension.toml  install-macos.sh  install.sh
src/: lib.rs
src/commands/: apply.rs  archive.rs  audit.rs  coverage.rs  init.rs  list.rs  mod.rs  proposal.rs  validate.rs
src/utils/: config.rs  errors.rs  fs.rs  mod.rs
tests/: integration_test.rs
