[package]
name = "zed-openspec"
version = "0.1.0"
edition = "2021"
authors = ["OpenSpec Contributors"]
description = "OpenSpec integration for Zed editor with LLM-powered code generation and audit trails"
repository = "https://github.com/mstanton/zed-openspec-extension"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", default-features = false, features = ["sync", "macros"] }
futures = "0.3"

# HTTP client for LLM APIs
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Cryptography for audit signatures
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Text processing
regex = "1.10"

# File watching
notify = "6.1"

# Caching
lru = "0.12"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
