[package]
name = "zed-openspec"
version = "0.1.0"
edition = "2021"
authors = ["OpenSpec Contributors"]
description = "OpenSpec integration for Zed editor with LLM-powered code generation and audit trails"
repository = "https://github.com/mstanton/zed-openspec-extension"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
